# Titanic

titanic/: .gitignore  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
titanic/.github/workflows/: deploy.yml
titanic/core/: auth.py  database.py  db_models.py  logger.py
titanic/models/: logistic_regression_model.pkl  scaler.pkl
titanic/notebook/: eda.ipynb
titanic/routes/: auth_service.py  db_service.py  explain_service.py  frontend_service.py  predict_service.py
titanic/templates/: explain.html  index.html  login.html  signup.html
titanic/templates/partials/: auth_error.html  bulk_result.html  error.html  explain_result.html  single_result.html
titanic/tests/: conftest.py  test_auth_service.py  test_db_service.py  test_explain_service.py  test_frontend_service.py  test_predict_service.py
